[package]
name = "new_ae_server"
version = "0.1.0"
authors = ["mifalyzz <mifalyzz@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
json5 = "0.4"
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "local-time",
] }
tracing-appender = { version = "0.2" }
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "sqlite",
    "regexp",
    "time",
] }
axum = { version = "0.7", features = ["http2", "multipart", "tracing"] }
axum-server = { version = "0.6", features = ["tls-rustls"] }
time = { version = "0.3", features = ["serde", "parsing", "formatting"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["timeout"] }
tower-http = { version = "0.5", features = ["trace", "cors", "timeout", "fs"] }

calamine = "0.24"
rust_xlsxwriter = "0.62"

regex = "1.0"